[package]
name = "jsonpick"
version = "0.1.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "reserving the name for later. the project will let you put in a json path, and print the contents to stdout"
readme = "README.md"
homepage = "https://github.com/Axlefublr/jsonpick"
repository = "https://github.com/Axlefublr/jsonpick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
serde_json = "1.0.105"
